--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="top">
         <h1>flixGURU</h1>
         <h4>A graphical guide to this week's top grossing movies</h4>
-        <div class="caption"><h4>Bubble Size</h4><p>The size of each movies bubbles is determined by the aggregate criticalscore calculated by <a href="www.rottentomatoes.com">Rotten Tomatoes</a>.The scores range from 0-100 (0 being an awful movie and 100 being great. FlixGURU takes this score and scales the bubbles accordingly therefore thelarger a bubble reperesent more critically acclaimed movies.</p>
+        <div class="caption"><h4>Bubble Size</h4><p>The size of each movie's bubble is determined by the aggregate critical score calculated by <a href="www.rottentomatoes.com">Rotten Tomatoes</a>.The scores range from 0-100 (0 being an awful movie and 100 being great. FlixGURU takes this score and scales the bubbles accordingly therefore larger bubbles reperesent more critically acclaimed movies.</p>
         </div>
       </div>
       <article>
@@ -25,7 +25,7 @@
       <div class="infobox">
 
       </div>
-      <footer>This is not a <a href="http://www.rottentomatoes.com">Rotten Tomatoes</a> website. It only scrapes the top 30 movies at the box office in the past week according to Rotten Tomatoes and displays them in an interesting way. This project uses the <a href="https://github.com/ricardmo/vishna">Vishna project</a> as it's d3 model.
+      <footer>This is not a <a href="http://www.rottentomatoes.com">Rotten Tomatoes</a> website. It only scrapes the top 30 movies at the box office in the past week according to Rotten Tomatoes and displays them in an interesting way. This project uses the <a href="https://github.com/ricardmo/vishna">Vishna project</a> as its d3 model.
       </footer>
     <script src="src/bubbles.js"></script>
     </body>
